XlibNotifications: port to modern signal-slot

To prevent orphaned slots from being activated.

BUG: 426937
CCBUG: 473262
FIXED-IN: 5.27.8
(cherry picked from commit 5de6a801b4c777256665db525513633516da6bb8)